mejoras en generico de restUtil